2008-11-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/utils/cmds.py, jhbuild/versioncontrol/svn.py,
	jhbuild/config.py: keep a copy of LD_LIBRARY_PATH; and use it when
	calling svn, to avoid gnutls library mismatch.  (closes: #561191)

2008-11-17  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules: removed pyxml, as GStreamer doesn't
	depend on it any longer (it was #519635).

2008-11-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/tinderbox.py: handle unicode errors with 'replace'
	instead of 'xmlcharrefreplace' in tinderbox output.  (closes: #560579,
	thanks Theppitak Karoonboonyanan for the debugging)

2008-11-16  Frederic Peters  <fpeters@0d.be>

	* modulesets/freedesktop-2.26.modules:
	* modulesets/gnome-external-deps-2.26.modules: updated poppler to
	0.10.1 and poppler-data to 0.2.1.

2008-11-16  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: updated libproxy to
	build <after> Mozilla (so Mozilla is not pulled, it is just ordered
	before libproxy when it is already in the dependency tree); and added
	WebKit in the same place.

2008-11-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py, jhbuild/config.py, jhbuild/moduleset.py,
	jhbuild/defaults.jhbuildrc, doc/C/jhbuild.xml: added a new
	ignore-suggests option to build, update and list commands; as well as a
	new ignore_suggests configuration variable.

2008-11-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules:
	* modulesets/gnome-suites-2.26.modules: added back dependency on
	mozilla to epiphany (it had been removed years ago because Mozilla
	didn't build, in r1152).

2008-11-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: if there is a Python installed in JHBuild prefix,
	set it in PYTHON environment variable, so it gets picked up by
	configure scripts.  (closes: #560872)

2008-11-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/svn.py: reformat module HREF to resolve ..