@@ -1,3 +1,8 @@
+2008-11-17  John Carr  <john.carr@unrouted.co.uk>
+
+	* jhbuild/versioncontrol/svn.py:
+	Simplify the code that generates the svn hrefs.
+
 2008-11-17  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/utils/cmds.py, jhbuild/versioncontrol/svn.py,
